syntax = "proto3";
option java_package = "com.example.userservice.Grpc";

message UserGetRequest{
  string email = 1;
}

message UserGetResponse{
  string response = 1;
}
service UserService{
  rpc getUserByEmail(UserGetRequest) returns(UserGetResponse);
}