syntax = "proto3";
option java_package = "Grpc";
message UserProjectSaveRequest{
  string request = 1;
}
message UserProjectSaveResponse{
  string response = 1;
  int32 status = 2;
}
service UserProjectService{
  rpc saveUserProject(UserProjectSaveRequest) returns(UserProjectSaveResponse);
}